force-app/main/default/objects/Order__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PubSub</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>