force-app/main/default/objects/Order__c/fields/CustZipcode__c.field-meta.xml
<CustomField>
    <fullName>CustZipcode__c</fullName>
    <formula>Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Zipcode</label>
    <type>Text</type>
</CustomField>