force-app/main/default/objects/Order__c/fields/DiscountTotal__c.field-meta.xml
<CustomField>
    <fullName>DiscountTotal__c</fullName>
    <description>Total Amount of discounts</description>
    <label>Discount Total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>