force-app/main/default/objects/Order__c/fields/ERPOrderId__c.field-meta.xml
<CustomField>
    <fullName>ERPOrderId__c</fullName>
    <description>ERP Order Id</description>
    <externalId>true</externalId>
    <label>ERP Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>