force-app/main/default/objects/Order__c/fields/OrderDetail__c.field-meta.xml
<CustomField>
    <fullName>OrderDetail__c</fullName>
    <description>Order Details</description>
    <label>Order Detail</label>
    <type>TextArea</type>
</CustomField>