force-app/main/default/objects/Order__c/fields/OrderRecordType__c.field-meta.xml
<CustomField>
    <fullName>OrderRecordType__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Record Type</label>
    <type>Text</type>
</CustomField>