force-app/main/default/objects/Order__c/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <description>Order Types</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work Order</fullName>
            </value>
            <value>
                <fullName>B2B Order</fullName>
            </value>
            <value>
                <fullName>Return Order</fullName>
            </value>
            <value>
                <fullName>B2C Order</fullName>
            </value>
            <value>
                <fullName>Standard Order</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sales Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>