force-app/main/default/objects/Order__c/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <description>payment in months or percentage</description>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Net 10</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Net 20</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Net 30</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>Net 45</label>
            </value>
            <value>
                <fullName>75</fullName>
                <label>Net 75</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>