force-app/main/default/objects/Order__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <description>order payment types</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Bank Financed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>