force-app/main/default/objects/Order__c/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <label>Pricebook</label>
    <length>18</length>
    <type>Text</type>
</CustomField>