force-app/main/default/objects/Order__c/recordTypes/CustomOrder.recordType-meta.xml
<RecordType>
    <fullName>CustomOrder</fullName>
    <active>true</active>
    <description>A customer order type used to represent any other orders than sales order</description>
    <label>Custom Order</label>
</RecordType>