force-app/main/default/objects/Order__c/recordTypes/SalesOrder.recordType-meta.xml
<RecordType>
    <fullName>SalesOrder</fullName>
    <active>true</active>
    <description>Sales Order</description>
    <label>Sales Order</label>
</RecordType>